@@ -7,6 +7,7 @@
 #include "optional.hpp"
 #include <boost/version.hpp>
 #include "libtorrent/time.hpp"
+#include <ctime>
 
 using namespace boost::python;
 namespace lt = libtorrent;
@@ -27,14 +28,16 @@ object import(str name)
 object datetime_timedelta;
 object datetime_datetime;
 
-struct chrono_time_duration_to_python
+template <typename Duration>
+struct chrono_duration_to_python
 {
-    static PyObject* convert(lt::time_duration const& d)
+    static PyObject* convert(Duration const& d)
     {
+        std::int64_t const us = lt::total_microseconds(d);
         object result = datetime_timedelta(
             0 // days
-          , 0 // seconds
-          , lt::total_microseconds(d)
+          , us / 1000000 // seconds
+          , us % 1000000 // microseconds
         );
 
         return incref(result.ptr());
@@ -51,6 +54,28 @@ struct time_duration_to_python
           , d.total_microseconds()
         );
 
+        return incref(result.ptr());
+    }
+};
+
+struct time_point_to_python
+{
+    static PyObject* convert(lt::time_point pt)
+    {
+        using std::chrono::system_clock;
+        using std::chrono::duration_cast;
+        time_t const tm = system_clock::to_time_t(system_clock::now()
+            + duration_cast<system_clock::duration>(pt - lt::clock_type::now()));
+
+        std::tm* date = std::gmtime(&tm);
+        object result = datetime_datetime(
+            (int)1900 + date->tm_year
+          , (int)date->tm_mon
+          , (int)date->tm_mday
+          , date->tm_hour
+          , date->tm_min
+          , date->tm_sec
+        );
         return incref(result.ptr());
     }
 };
@@ -82,20 +107,20 @@ void bind_datetime()
     datetime_timedelta = datetime["timedelta"];
     datetime_datetime = datetime["datetime"];
 
-    to_python_converter<
-        boost::posix_time::time_duration
-      , time_duration_to_python
-    >();
+    to_python_converter<boost::posix_time::time_duration
+      , time_duration_to_python>();
 
-    to_python_converter<
-        boost::posix_time::ptime
-      , ptime_to_python
-    >();
+    to_python_converter<boost::posix_time::ptime
+      , ptime_to_python>();
 
-    to_python_converter<
-        lt::time_duration
-      , chrono_time_duration_to_python
-    >();
+    to_python_converter<lt::time_point
+      , time_point_to_python>();
+
+    to_python_converter<lt::time_duration
+      , chrono_duration_to_python<lt::time_duration>>();
+
+    to_python_converter<std::chrono::seconds
+      , chrono_duration_to_python<std::chrono::seconds>>();
 
     optional_to_python<boost::posix_time::ptime>();
 }
